# RTSP-STREAM121

./: Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
demo_rtsp_server/: docker-compose.yaml
rtsppy/: asgi.py  settings.py  urls.py  wsgi.py
stream/: admin.py  consumer.py  models.py  routing.py  serializers.py  views.py
stream/migrations/: 0001_initial.py  0002_alter_stream_url.py
stream/utils/: mtcnn_detector.py  rtsp_client.py
ui/: index.html  package.json
ui/src/: config.ts  main.tsx  styles.css
ui/src/api/stream/: index.ts
ui/src/components/: Header.tsx
ui/src/components/stream/: AddStreamDialog.tsx  EditStreamDialog.tsx  StreamList.tsx  StreamManager.tsx  StreamViewPanel.tsx  StreamViewer.tsx
ui/src/components/ui/: badge.tsx  button.tsx  tabs.tsx
ui/src/query/: stream.ts
ui/src/routes/: __root.tsx  index.tsx
